syntax = "proto2";

package uk.gov.homeoffice.drt.protobuf.messages;

message ModelsAndFeaturesMessage {
  repeated ModelAndFeaturesMessage modelsAndFeatures = 1;
}

message ModelAndFeaturesMessage {
  optional RegressionModelMessage model = 1;
  optional FeaturesMessage features = 2;
  optional int32 examplesTrainedOn = 3;
  optional double improvementPct = 4;
  optional string targetName = 5;
  optional int64 timestamp = 6;
}

message RemoveModelMessage {
  optional string targetName = 1;
  optional int64 timestamp = 2;
}

message RegressionModelMessage {
  repeated double coefficients = 1;
  optional double intercept = 2;
  optional double scale = 3;
}

message FeaturesMessage {
  repeated string oneToManyFeatures = 1;
  repeated string singleFeatures = 2;
  repeated string oneToManyValues = 3;
}
